# ChangeLog for sys-devel/kgcc64
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/kgcc64/ChangeLog,v 1.60 2014/10/22 10:31:38 armin76 Exp $

  22 Oct 2014; Raúl Porcel <armin76@gentoo.org> kgcc64-4.7.3.ebuild:
  sparc stable

  30 Sep 2014; Jeroen Roovers <jer@gentoo.org> kgcc64-4.9.1.ebuild:
  Marked ~hppa too.

*kgcc64-4.9.1 (20 Sep 2014)

  20 Sep 2014; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.9.1.ebuild:
  Version bump.

  17 Sep 2014; Jeroen Roovers <jer@gentoo.org> kgcc64-4.8.3.ebuild:
  Stable for HPPA too.

  17 Sep 2014; Jeroen Roovers <jer@gentoo.org> kgcc64-3.4.6.ebuild,
  kgcc64-4.1.2.ebuild, kgcc64-4.2.4.ebuild, -kgcc64-4.3.3.ebuild,
  kgcc64-4.3.5.ebuild, -kgcc64-4.4.4.ebuild, kgcc64-4.4.5.ebuild,
  kgcc64-4.4.6.ebuild, -kgcc64-4.5.2.ebuild, kgcc64-4.5.3.ebuild,
  kgcc64-4.5.4.ebuild, kgcc64-4.6.3.ebuild, kgcc64-4.6.4.ebuild,
  -kgcc64-4.7.2.ebuild, kgcc64-4.7.3.ebuild, kgcc64-4.7.4.ebuild,
  kgcc64-4.8.1.ebuild, kgcc64-4.8.2.ebuild, kgcc64-4.8.3.ebuild:
  EAPI bump (maybe bug #474358).

  25 Jun 2014; Jeroen Roovers <jer@gentoo.org> kgcc64-4.7.4.ebuild:
  Drop patches that do not make sense (or fail to apply).

*kgcc64-4.8.3 (17 Jun 2014)
*kgcc64-4.7.4 (17 Jun 2014)

  17 Jun 2014; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.7.4.ebuild,
  +kgcc64-4.8.3.ebuild:
  Version bump.

*kgcc64-4.8.2 (16 Nov 2013)

  16 Nov 2013; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.8.2.ebuild:
  Version bump.

*kgcc64-4.8.1 (09 Oct 2013)

  09 Oct 2013; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.8.1.ebuild:
  Version bump.

  25 Sep 2013; Jeroen Roovers <jer@gentoo.org> kgcc64-4.7.3.ebuild:
  Stable for HPPA too.

  24 Sep 2013; Jeroen Roovers <jer@gentoo.org> kgcc64-4.7.3.ebuild:
  Bump PATCH_VER.

*kgcc64-4.7.3 (17 Jul 2013)
*kgcc64-4.6.4 (17 Jul 2013)
*kgcc64-4.5.4 (17 Jul 2013)

  17 Jul 2013; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.5.4.ebuild,