@@ -33,6 +33,8 @@ DIST gcc-4.8.3-patches-1.1.tar.bz2 19882 SHA256 019cbe76f20f4e294b900ccb99a6b525
 DIST gcc-4.8.3.tar.bz2 86126808 SHA256 6a8e4f11b185f4fe2ed9d7fc053e80f8c7e73f800c045f51f9d8bea33f080f1e SHA512 2b40d231e8445f9c1654137df509f09ce1187b475138ca7f648f710d922a1718f740b2d8a37c26e16b5e27900c60358be98229ae884a6f1f70e9df44ad24d02b WHIRLPOOL 6dd3bd4b51bb9b8c52fb743bba28cde8612ff7090b71e56bf02d3613b91cd4c3c4dd91dbcb672985f22400d776870ba55550e1fc44afae9737092ceca5f83ebd
 DIST gcc-4.9.1-patches-1.0.tar.bz2 18918 SHA256 5addded7684318fd7ad16dba5a1407c27938ba803cec29b5376c32aaf432a36e SHA512 ade6f02a5d26f201c9d5a01da1174f803309358e49e9b93c848a4239f90b6301bc863951af25daf0188d68088fe8a02653391453158c1846751ddf2f286ee9da WHIRLPOOL 3b5f0f39c925d379a2db35b5335ed3fd7d456fd19fdeb315c87ba307e3ab6e8e8ebf29f8db894c43e3ea26a4318d4ca7ff47c635351a7f38aaa2afc33e3016cc
 DIST gcc-4.9.1.tar.bz2 89854120 SHA256 d334781a124ada6f38e63b545e2a3b8c2183049515a1abab6d513f109f1d717e SHA512 8598106a4b7c03bb4d6e29fa1bfa9ee6b6390d1f1bca86c1ccd27aed830ae1d126daa50c4041016cbfa76090dd66c51f1ce06958b8ccd6c3be51eae875125593 WHIRLPOOL 45c663aca6fe3212cf6ff34611df3041204b942aedf5005b133f6ab4c40c994d405a9356429a06279b533706960d8ef80f363dd4ee7e78848052e621c49ad681
+DIST gcc-4.9.2-patches-1.0.tar.bz2 18213 SHA256 e4e9a665381beb4018779a14d5124528a9d5df0e0772f3b7639390d6bda51515 SHA512 27deba0db6a500b160829fdcf5fc9a70be4b4fbd45c89d18dd2d0808d42803657693d0ed0f2b664e020a0d2ac39cdfe550e397eb4c2a6f64220cae1e7a16ff20 WHIRLPOOL 7e04ed92038f19a9b00fe0022c2c7ce3df8621fccca95cb2da37333a5edcc0857efe96aed68f5c4b51db19ecd23ec1194412f1bc24730cea30db7b342c12dfdf
+DIST gcc-4.9.2.tar.bz2 89939747 SHA256 2020c98295856aa13fda0f2f3a4794490757fc24bcca918d52cc8b4917b972dd SHA512 e96cba06d572dbe7f382a2b00fd9297dcf9f9219d46a9ad0bd904dc36d5e7db3335e422640b79a27fed6fde91b0731732b94a0e2fbcd47344d6779f8ba1f4f9c WHIRLPOOL c4afdd0ec98e6f903044f1d3061fd96cf1e9bcbe2f90c388f5bc9ff8b2493b94367e84fdff7c2075ba37e2f950ecf2dba7c11786c653c2c7e86a5e8ff7d98e85
 EBUILD kgcc64-3.4.6.ebuild 2309 SHA256 dd1aebdb9c75d72ac26012672dec5106177eac8d3172fd50d0aea6cf9052e0d5 SHA512 8f8213984d245d3b938ec8d26de1b137af1acdc9cf379d684538efef8749225140392fc1bd1cf56cc2718d7c148f5173c53a24253d37d2e89bb94bb56fa3cc0b WHIRLPOOL b8f7c50c049365c1f93ed57ce2c2f504c8771c6856cbe32a434dfcb3aa094c7dfac79ed0b0d66cc5b5dbdc164e4d99469f3f65e4f9e6cba36ce873fb7b7ab65e
 EBUILD kgcc64-4.1.2.ebuild 1320 SHA256 b7feafad506f3343b1a34f6f76b033fce3d599d08b4182254a9f7f4e8352118b SHA512 b53fc23ec1c9a984f472f145f72b13fe70414dba1b4cf6353e577f4975321895f587ef90d62f90dda1a200fd199bb7879c337486458143fed2daf27418b9a60e WHIRLPOOL 09606f899303b1ed6dfb70161cf641724e61224b94bc8a2297d594d5f8d47385650253f2d75fb936bb51fd7cdce1400b9041e30aaac572b92517cffb7312bc3d
 EBUILD kgcc64-4.2.4.ebuild 1191 SHA256 0f5acee02cb31e24391cca0c88de56ffc4352fcfe37affd9ea98ef44b959ed2f SHA512 60a4f675aa83cb818d4ef778e474c879ffeddbc971f602df6687f9e8ef6c577a24a5682746bfcba457b7e1efafd7424a218d46861849fc26031806f5e1425238 WHIRLPOOL 782158e7d4efe0bf10f72ebad4c7ac51bc420c40946f51fd1bfd85c9ae7da457a18af5f895aa503e96759791c5de39d22b659ea1df1d2396779c96e668dd1de3
@@ -49,12 +51,13 @@ EBUILD kgcc64-4.8.1.ebuild 1403 SHA256 556d5dfafd40959ceecbc839eba00cca4a66c754e
 EBUILD kgcc64-4.8.2.ebuild 1403 SHA256 44e6c94e816db7f6a36df4b1a14a5dffe965d0a3a7489c75f358e03a88fd5be3 SHA512 01cd7c5882cdc8316aa23d50a9e543670df357385f94a3f796c2774c6d6b41cece1903a6880241d83fbd776b605a45a77282e61751fa9dd79597e0b399ed1470 WHIRLPOOL 7ae7a06bfa8f1b0c07114508e40dcceb04b19a6ff7b832d16a84f89a279a005ec40c77b068f2d671c792188ab04e4cb94ead4e6aecee64fdda281dfb70cd5bb1
 EBUILD kgcc64-4.8.3.ebuild 1402 SHA256 89664a4cb608bb226a5e558afeab20df947f2154fd2a482fc284455bea438b05 SHA512 d83ece53ea9628a318c8c6039dcdeb555239a91bc94b5daa435ac9cd292147e16522ab8f20013d7ac391a1c8d7a0f9dd2600981df21d5a06db282be3f8c0dcf6 WHIRLPOOL be51bc29807422933bc050e565cd82376b559aed9451df9ff61ce98a24bec5f44ea3d18e5e92ca95fc215c4d4f470e286c7427da3bf25d33b7eab677f8527197
 EBUILD kgcc64-4.9.1.ebuild 1396 SHA256 ed35b9b5a064bcce17a449eb0d1e185e2d6bc132e65a0fd719e65b55c59ed7b5 SHA512 f9f9ff27bf07e06ddb94320ef4837b33916e3d6042a983ee4291aa37e90bfe8edd6d6360c7dd051d542c4393c4ce9f69154a5e804aedaa639c3aa75d75b4de1d WHIRLPOOL ba9a192e2db92fee10426e93157b8bccf445ec4222f4a58ff18d3d0424be4f87195efef71ed944f14bfbd82518c66c5b8a6049988310f230e4a92de8919c91ba
-MISC ChangeLog 8547 SHA256 205b3d38dbd26f252dba7384f41cd994e0ccef5d219d42eb677e2407dc3d33e9 SHA512 992f1501aecac0b4640eb081a8b1840957f3012836581fe168322c17c16f2ac6000db839c97476b6352236da4bc047ef7bcd5f10f2f045dea553d9c13efae33d WHIRLPOOL e19c943e87b99211bf576a8120f2e0e98da18b22ba39730bdaca1e52ec993fd63cc3d21acbb89ed00569f2c64a12f4b36aa539367eba3a676a7f3bdc7c0800c7
+EBUILD kgcc64-4.9.2.ebuild 1391 SHA256 b5e269aa412498c3ffa41ef3e7e4e90771228b238ceb1129428137e177483a01 SHA512 f8d8ab8ca29bf167b7091806e1dd77810cf030a81aa36650febae85abae05e6d724d706105194f2c88f27b46f3c205024cadcfef43fabde6647cc3d0752f6bd5 WHIRLPOOL efb2b217608cf0905714bcf7f5b85bdce6afbf55e1a4bc19d697402cc42043b1123481d95443813895662c182ecda8bcf3ca375bd50d0c3f841bac5833c626d4
+MISC ChangeLog 8658 SHA256 11b1a29f210297e22a3e7463e81c5a86a4c0e24c129ce33d57074467167a6027 SHA512 99d04afd9bdc4a433b3e52064511166ed77dd4fb8bc0603d9fd45a27d4b679eaf6ff7d7e09b5cab1488518372edd00fb58217ef547c1fcdebb8cfdf52daa4b48 WHIRLPOOL 37c27ed4dfb0caf032886cd4f6f64d5b56ef8d11280f5e14771b92830e5ebbf5dcfc9e430834f0a02e4182ca39b0da0e6b36c8c663191861dd1d63dbaddd36c5
 MISC metadata.xml 382 SHA256 c9dca0d3f0e7a75face311dd95e43218725fa06e8ca92e522aa1d369292c8ffe SHA512 d30537694d09e08b3fff795a38a99becaa87d9232ab9031523912190d715fd6262aff92db20742a75320774e71db7b05ed9496cd025b3fb1de94bf6ae197b86e WHIRLPOOL 6c3200a5c89349590c9894c1d7cdbf0d516a0758631e9bad8faaec63626afe5b2197e9a8b584e50271ca611e59e4458ad0880fac628fc28c9f554ef2c9e2f54e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRHh5AACgkQuQc30/atMkBUqgCglpG4Pk2eXGbAgJoBO7eqd0GR
-kRoAoI1g8pdLnN4NVlCc8S3RnS5BopMl
-=emik
+iEYEAREIAAYFAlRbWFAACgkQVWmRsqeSphNdgQCfdqC3tS850djzKaheDNW8z1tn
+zYgAnR3PlXbBbjTIIUxrReiMGiLv1yfQ
+=pDQh
 -----END PGP SIGNATURE-----
