@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/kgcc64
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/kgcc64/ChangeLog,v 1.60 2014/10/22 10:31:38 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/kgcc64/ChangeLog,v 1.61 2014/11/06 11:15:27 jer Exp $
+
+*kgcc64-4.9.2 (06 Nov 2014)
+
+  06 Nov 2014; Jeroen Roovers <jer@gentoo.org> +kgcc64-4.9.2.ebuild:
+  Version bump.
 
   22 Oct 2014; Raúl Porcel <armin76@gentoo.org> kgcc64-4.7.3.ebuild:
   sparc stable
